[tool.poetry]
name = "practice-final"
version = "0.1.0"
description = ""
authors = ["You Guang <yokurang@gmail.com>"]
readme = "README.md"
packages = [{include = "practice_final"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
